Fix spacing on tab items

--- a/src/components/common/Tabs.module.scss
+++ b/src/components/common/Tabs.module.scss
@@ -37,7 +37,7 @@
 
   @include breakpoints.md {
     width: auto;
-    padding: 8px 22px 8px 0;
+    padding: 8px 12px 8px 12px;
   }
 }
 
